--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -26,6 +26,7 @@ input[type=checkbox] {
   width: 30px;
   height: 30px;
   border: 2px solid $black;
+  border-radius: 0;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
